Improved mobile interface and sidebar updates

--- a/lib/sidebar.html
+++ b/lib/sidebar.html
@@ -1,7 +1,4 @@
-<nav class="col-lg-2 col-md-3 col-sm-4 d-none d-md-block bg-light sidebar">
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	</button>
+<nav id = "sidebar" class="col-lg-2 col-md-3 col-sm-4 d-none d-md-block bg-light sidebar">
 	<div class="sidebar-sticky" id = "main-sidebar">
 		<ul class="nav flex-column">
 			<li class="nav-item">
