--- a/communities.html
+++ b/communities.html
@@ -13,16 +13,18 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/pviz-core.css" rel="stylesheet">
     <link href="css/oximouse.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="css/dashboard.css" rel="stylesheet">
   </head>
 
 	<body>
 		<nav class="navbar navbar-light sticky-top bg-light flex-md-nowrap p-0">
-			<a class="navbar-brand col-lg-2 col-md-3 col-sm-4 mr-0" href="index.html">
-				<img border="0" src="img/oximouse.png" width="100" height="30">
-			</a>
+			<div id = "brandSidebar" class = "col-lg-2 col-md-3 col-sm-4 mr-0">
+				<a class="navbar-brand" href="index.html">
+					<img border="0" src="img/oximouse.png" width="100" height="30">
+				</a>
+				<button class="btn btn-outline-secondary" type="button" id = "sidebarToggle">
+					<span data-feather="align-left"></span>
+				</button>
+			</div>
 			<div class="input-group">
 				<div class="input-group-prepend">
 					<span class="input-group-text border border-secondary" id="searchIcon">Search Proteins</span>
@@ -41,9 +43,9 @@
 
 		<div class="container-fluid">
 			<div class="row d-flex flex-column">
-				<div id = "sidebar"></div>
+				<div id = "sidebarDiv"></div>
 				<!-- Main dashboard grid -->
-				<div class="ml-sm-auto col-lg-10 col-md-9 col-sm-8 pt-3 px-4 flex-grow-1">
+				<div class="ml-sm-auto col-lg-10 col-md-9 col-sm-8 pt-3 px-4 flex-grow-1" id = "dashboardBody">
 					<div class="container-fluid border-bottom">
 						<div class="row mr-sm-auto col-lg-12">
 							<div class="mr-sm-auto col-lg-6 col-md-6 pt-3 px-4">
@@ -113,26 +115,18 @@
 	    <script>window.jQuery || document.write('<script src="js/jquery-3.4.1.min.js"><\/script>')</script>
 	    <!-- Icons -->
 	    <script src="js/feather.min.js"></script>
-	    <script>
-			$(function(){
-				$("#sidebar").load("lib/sidebar.html"); 
-			});
-	    </script>
 	    <!-- External -->
 	    <script src="js/popper.min.js"></script>
 	    <script src="js/bootstrap.min.js"></script>
-	    <script src="js/oximouse_general.js"></script>
 	    <script src="js/d3.min.js"></script>
 	    <script src="js/plotly-cartesian.min.js"></script>
 	    <script src="js/cytoscape.min.js"></script>
 	    <!-- Oximouse -->
+	    <script src="js/oximouse_general.js"></script>
 	    <script src="js/oximouse_plots.js"></script>
 	    <script src="js/oximouse_communities.js"></script>
 	    <script src="js/oximouse.js"></script>
 	    <script>
-			$(function(){
-				$("#sidebar").load("lib/sidebar.html"); 
-			});
 			var cy;
 			var communities;
 		    var communitiesColors = [['0', 'blue'],['0.5', 'white'],['1', 'white']];
@@ -140,6 +134,7 @@
 		    ImportCommunityAnnotations("data/huttlin2017_communities_oxi_overlay.tsv");
 		    ImportInteractionData("data/combinedInteractionList_032019.tsv");
 			ConsumeGraphData("data/communities_tissues_oxi_pval.tsv");
-	    </script>
+			feather.replace();
+		</script>
 	</body>
 </html>
