--- a/download.html
+++ b/download.html
@@ -20,9 +20,14 @@
 
 	<body>
 		<nav class="navbar navbar-light sticky-top bg-light flex-md-nowrap p-0">
-			<a class="navbar-brand col-lg-2 col-md-3 col-sm-4 mr-0" href="index.html">
-				<img border="0" src="../img/oximouse-01.png" width="150" height="30">
-			</a>
+			<div id = "brandSidebar" class = "col-lg-2 col-md-3 col-sm-4 mr-0">
+				<a class="navbar-brand" href="index.html">
+					<img border="0" src="img/oximouse.png" width="100" height="30">
+				</a>
+				<button class="btn btn-outline-secondary" type="button" id = "sidebarToggle">
+					<span data-feather="align-left"></span>
+				</button>
+			</div>
 			<h2>Download OxiMouse Data</h2>
 			<ul class="navbar-nav px-3">
 				<li class="nav-item text-nowrap">
@@ -33,10 +38,10 @@
 
 		<div class="container-fluid">
 			<div class="row">
-				<div id = "sidebar"></div>
+				<div id = "sidebarDiv"></div>
 			</div>
 		</div>
-		<div class="ml-sm-auto col-lg-10 col-md-9 col-sm-8 pt-3 px-4">
+		<div class="ml-sm-auto col-lg-10 col-md-9 col-sm-8 pt-3 px-4"  id = "dashboardBody">
 			<div id = "downloadAccordion">
 				<div class = "card">
 					<div class = "card-header bg-dark text-white" id = "downloadAllHeader">
@@ -86,12 +91,10 @@
 	    <script src="js/popper.min.js"></script>
 	    <script src="js/bootstrap.min.js"></script>
 	    <script src="js/oximouse_download.js"></script>
+	    <script src="js/oximouse_general.js"></script>
 		<script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
 		<script>
-			$(function(){
-				$("#sidebar").load("lib/sidebar.html"); 
-			});
-			feather.replace()
+			feather.replace();
 	    </script>
 	</body>
 </html>
