--- a/index.html
+++ b/index.html
@@ -11,19 +11,20 @@
 
     <!-- Oximouse CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/pviz-core.css" rel="stylesheet">
     <link href="css/oximouse.css" rel="stylesheet">
     <link href="css/jquery-ui.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="css/dashboard.css" rel="stylesheet">
   </head>
 
 	<body>
 		<nav class="navbar navbar-light sticky-top bg-light flex-md-nowrap p-0">
-			<a class="navbar-brand col-lg-2 col-md-3 col-sm-4 mr-0" href="index.html">
-				<img border="0" src="img/oximouse.png" width="100" height="30">
-			</a>
+			<div id = "brandSidebar" class = "col-lg-2 col-md-3 col-sm-4 mr-0">
+				<a class="navbar-brand" href="index.html">
+					<img border="0" src="img/oximouse.png" width="100" height="30">
+				</a>
+				<button class="btn btn-outline-secondary" type="button" id = "sidebarToggle">
+					<span data-feather="align-left"></span>
+				</button>
+			</div>
 			<ul class="navbar-nav px-3">
 				<li class="nav-item text-nowrap">
 					<a class="nav-link" href="help.html">Help</a>
@@ -33,8 +34,8 @@
 
 		<div class="container-fluid">
 			<div class="row">
-				<div id = "sidebar"></div>
-				<div id = "welcomeAccordion" class="ml-sm-auto col-lg-10 col-md-9 col-sm-8 pt-3 px-4">
+				<div id = "sidebarDiv"></div>
+				<div id = "welcomeAccordion" class="ml-sm-auto col-lg-10 col-md-9 col-sm-8 pt-3 px-4"  id = "dashboardBody">
 					<div class = "card">
 						<div class = "card-header text-white bg-secondary" id = "welcomeHeader">
 							<h2>
@@ -63,20 +64,16 @@
 	    <!-- Placed at the end of the document so the pages load faster -->
 	    <script>window.jQuery || document.write('<script src="js/jquery-3.4.1.min.js"><\/script>')</script>
 	    <script src="js/feather.min.js"></script>
-	    <script>
-		    var allSiteData;
-			$(function(){
-				$("#sidebar").load("lib/sidebar.html"); 
-			});
-	    </script>
 	    <script src="js/jquery-ui.min.js"></script>
 	    <script src="js/d3.min.js"></script>
 	    <script src="js/feather.min.js"></script>
 	    <script src="js/popper.min.js"></script>
 	    <script src="js/bootstrap.min.js"></script>
 	    <script src="js/oximouse.js"></script>
+	    <script src="js/oximouse_general.js"></script>
 	    <script>
 	    	ConsumeSearchData("data/site_all.tsv");
-	    </script>
+			feather.replace();
+		</script>
 	</body>
 </html>
