--- a/download.html
+++ b/download.html
@@ -24,7 +24,7 @@
 				<a class="navbar-brand" href="index.html">
 					<img border="0" src="img/oximouse.png" width="100" height="30">
 				</a>
-				<button class="btn btn-outline-secondary" type="button" id = "sidebarToggle">
+				<button class="btn btn-outline-secondary" type="button" id = "sidebarToggle" onClick="">
 					<span data-feather="align-left"></span>
 				</button>
 			</div>
