--- a/sites.html
+++ b/sites.html
@@ -23,7 +23,7 @@
 				<a class="navbar-brand" href="index.html">
 					<img border="0" src="img/oximouse.png" width="100" height="30">
 				</a>
-				<button class="btn btn-outline-secondary" type="button" id = "sidebarToggle">
+				<button class="btn btn-outline-secondary" type="button" id = "sidebarToggle" onClick="void(0);">
 					<span data-feather="align-left"></span>
 				</button>
 			</div>
@@ -54,12 +54,17 @@
 							<div class="mr-sm-auto col-lg-5 col-md-5 pt-3 px-4 shadow-sm">
 								<h4>Cys-Oxidation Stochiometry</h4>
 								<button class="btn btn-outline-secondary" id = "fullOrModOnlyToggleHeatmap">Modified Positions</button>
+								<button class="btn btn-outline-secondary" id = "tissueOrderToggle">Order By Tissue</button>
 								<div class="my-4" id="siteHeatmap"></div>
 							</div>
 							<div class="mr-sm-auto col-lg-6  col-md-6 border-bottom">
 								<div id = "seqMapDiv" class = "ml-sm-auto col-lg-12">
-									<h4>Sequence Map</h4>
-									<div class="my-4" id="sequenceMap"></div>
+									<h4>Sequence Map
+										<button class="btn btn-outline-secondary d-inline" type="button" id = "seqMapUnzoom" onclick = "featureViewer.resetZoom()">
+											<span data-feather="zoom-out"></span>
+										</button>
+									</h4>
+									<div class="my-2" id="sequenceMap"></div>
 								</div>
 								<div id = "siteDiv" class = "ml-sm-auto col-lg-12 border border-dark border-top border-left">
 									<div id = "siteQuant" class = "ml-sm-auto col-lg-12">
