--- a/sites.html
+++ b/sites.html
@@ -54,7 +54,6 @@
 							<div class="mr-sm-auto col-lg-5 col-md-5 pt-3 px-4 shadow-sm">
 								<h4>Cys-Oxidation Stochiometry</h4>
 								<button class="btn btn-outline-secondary" id = "fullOrModOnlyToggleHeatmap">Modified Positions</button>
-								<button class="btn btn-outline-secondary" id = "tissueOrderToggle">Order By Tissue</button>
 								<div class="my-4" id="siteHeatmap"></div>
 							</div>
 							<div class="mr-sm-auto col-lg-6  col-md-6 border-bottom">
@@ -68,7 +67,9 @@
 								</div>
 								<div id = "siteDiv" class = "ml-sm-auto col-lg-12 border border-dark border-top border-left">
 									<div id = "siteQuant" class = "ml-sm-auto col-lg-12">
-										<h4>Site Stoichiometry</h4>
+										<h4>Site Stoichiometry
+											<button class="btn btn-outline-secondary d-inline" id = "tissueOrderToggle">Order By Tissue</button>
+										</h4>
 										<div id = "siteQuantPlot"></div>
 									</div>
 									<div id = "siteInfo" class="mr-sm-auto col-lg-12">
