Update reference, remove 2019

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								<h5>For additional information, check out the <a href="help.html">Help</a> page</h5>
 								<br />
 								<p>
-									Please Cite: <b>Haopeng Xiao, et al. 2019</b>
+									Please Cite: <b>Haopeng Xiao, et al.</b>
 								</p>
 								<br />
 								<img border="0" src="img/oximouse.png" height="100">
