--- a/communities.html
+++ b/communities.html
@@ -119,6 +119,7 @@
 	        </div>
 	    </div>
 	    <!-- Placed at the end of the document so the pages load faster -->
+	    <script src="js/oximouse_analytics.js"></script>
 	    <script>window.jQuery || document.write('<script src="js/jquery-3.4.1.min.js"><\/script>')</script>
 	    <!-- Icons -->
 	    <script src="js/feather.min.js"></script>
