--- a/help.html
+++ b/help.html
@@ -193,6 +193,7 @@
 			</div>
 		</div>
 		<!-- Placed at the end of the document so the pages load faster -->
+		<script src="js/oximouse_analytics.js"></script>
 	    <script>window.jQuery || document.write('<script src="js/jquery-3.4.1.min.js"><\/script>')</script>
 	    <script src="js/popper.min.js"></script>
 	    <script src="js/bootstrap.min.js"></script>
