cookie consent css

--- a/communities.html
+++ b/communities.html
@@ -1,19 +1,20 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="img/oximouse-02.png">
-
-    <title>OxiMouse Dashboard</title>
-
-    <!-- Oximouse CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/pviz-core.css" rel="stylesheet">
-    <link href="css/oximouse.css" rel="stylesheet">
-  </head>
+	<head>
+	    <meta charset="utf-8">
+	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	    <meta name="description" content="">
+	    <meta name="author" content="">
+	    <link rel="icon" href="img/oximouse-02.png">
+	
+	    <title>OxiMouse Dashboard</title>
+	
+	    <!-- Oximouse CSS -->
+	    <link href="css/bootstrap.min.css" rel="stylesheet">
+	    <link href="css/pviz-core.css" rel="stylesheet">
+	    <link href="css/oximouse.css" rel="stylesheet">
+		<link href="css/jquery-eu-cookie-law-popup.css" rel="stylesheet">
+	</head>
 
 	<body>
 		<nav class="navbar navbar-light sticky-top bg-light flex-md-nowrap p-0">
@@ -109,7 +110,9 @@
 	            <div class="modal-content">
 	                <div class="modal-body">
 	                    <h4>No protein with that Gene Symbol or GeneID was observed in the BioPlex Communities dataset.</h4>
-	                    <p>Query: <p id = "noProteinQuery"></p></p>
+	                    <p>Query:
+	                    	<p id = "noProteinQuery"/>
+	                    </p>
 	                    <p>For a complete list of OxiMouse data, visit the <a href="download.html" target="_blank">Download</a> page.</p>
 	                </div>
 	                <div class="modal-footer">
