--- a/sites.html
+++ b/sites.html
@@ -1,21 +1,22 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="img/oximouse-02.png">
-
-    <title>OxiMouse Dashboard</title>
-
-    <!-- Oximouse CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/pviz-core.css" rel="stylesheet">
-    <link href="css/oximouse.css" rel="stylesheet">
-    <link href="css/jquery-ui.min.css" rel="stylesheet">
-    <link href="css/datatables.min.css" rel="stylesheet">
-  </head>
+	<head>
+	    <meta charset="utf-8">
+	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	    <meta name="description" content="">
+	    <meta name="author" content="">
+	    <link rel="icon" href="img/oximouse-02.png">
+	
+	    <title>OxiMouse Dashboard</title>
+	
+	    <!-- Oximouse CSS -->
+	    <link href="css/bootstrap.min.css" rel="stylesheet">
+	    <link href="css/pviz-core.css" rel="stylesheet">
+	    <link href="css/oximouse.css" rel="stylesheet">
+	    <link href="css/jquery-ui.min.css" rel="stylesheet">
+	    <link href="css/datatables.min.css" rel="stylesheet">
+	    <link href="css/jquery-eu-cookie-law-popup.css" rel="stylesheet">
+	</head>
 
 	<body>
 		<nav class="navbar navbar-light sticky-top bg-light flex-md-nowrap p-0">
