add body clas for eupopup

--- a/help.html
+++ b/help.html
@@ -18,7 +18,7 @@
 	    <link href="css/jquery-eu-cookie-law-popup.css" rel="stylesheet">
 	</head>
 
-	<body class = "europop-top">
+	<body class="eupopup eupopup-top">
 		<nav class="navbar navbar-light sticky-top bg-light flex-md-nowrap p-0">
 			<div id = "brandSidebar" class = "col-lg-2 col-md-3 col-sm-4 mr-0">
 				<a class="navbar-brand" href="index.html">
