--- a/communities.html
+++ b/communities.html
@@ -16,7 +16,7 @@
 		<link href="css/jquery-eu-cookie-law-popup.css" rel="stylesheet">
 	</head>
 
-	<body>
+	<body class="eupopup eupopup-top">
 		<nav class="navbar navbar-light sticky-top bg-light flex-md-nowrap p-0">
 			<div id = "brandSidebar" class = "col-lg-2 col-md-3 col-sm-4 mr-0">
 				<a class="navbar-brand" href="index.html">
