Add tippy.js and new sites.html tooltips

--- a/lib/sidebar.html
+++ b/lib/sidebar.html
@@ -80,7 +80,7 @@
 			</li>
 		</ul>
 		<div class="mb-5 ml-2">
-			&copy;: Gygi Lab at Harvard Medical School
+			&copy;: <a href = "https://gygi.med.harvard.edu/" target = "_blank">Gygi</a> & <a href = "https://chouchanilab.dana-farber.org/" target = "_blank">Chouchani</a> Labs at HMS/DFCI.
 		</div>
 	</div>
 </nav>
