--- a/sites.html
+++ b/sites.html
@@ -162,10 +162,10 @@
 			var siteHeatmapColors = [['0', 'white'],['0.1', 'rgb(141,141,141)'],['0.25', 'rgb(164,11,11)'],['1', 'rgb(214,0,0)']];
 			(function(){
 				tippy('#cysOxLabel', {
-					  content: "Oxidation sites are colored according to their oxidation% values in each tissue. Click to plot Site Stoichiometry.",
+					  content: "Oxidation sites are colored according to their oxidation % values in each tissue. Click to plot Site Stoichiometry.",
 					});
 				tippy('#seqMapLabel', {
-					  content: "Map of cysteine oxidation sites (identified by OxiMouse) and phosphorylation sites (annotated in Uniprot).",
+					  content: "Cysteine oxidation sites (identified by OxiMouse) and phosphorylation sites (annotated in Uniprot) mapped to the selected protein sequence.",
 					});
 				tippy('#siteStoichLabel', {
 					  content: "Site stoichiometry for an individual cysteine oxidation site.",
