--- a/communities.html
+++ b/communities.html
@@ -145,7 +145,7 @@
 		    var communitiesColors = [['0', 'blue'],['0.5', 'white'],['1', 'white']];
 			(function(){
 				tippy('#communityEnrichmentLabel', {
-					  content: "Oxidation sites are colored according to their oxidation % values in each tissue. Click to plot Site Stoichiometry.",
+					  content: "Enrichment of oxidized proteins in each protein network observed in Bioplex 2.0. Click to display network graph.",
 					});
 				tippy('#networkLabel', {
 					  content: "Graph display of selected BioPlex community. Colored by oxidation % values (red: >20%; orange: 10-20%; skyblue: <10%; gray: NQ).",
