d3.csv sorts input data by uniprot. isoform modal

--- a/sites.html
+++ b/sites.html
@@ -129,6 +129,19 @@
 	            </div>
 	        </div>
 	    </div>
+	    <div class="modal fade" id="isoformModal" tabindex="-1" role="dialog">
+	        <div class="modal-dialog modal-dialog-centered" role="document">
+	            <div class="modal-content">
+	                <div class="modal-body">
+	                    <h4>The query protein has isoforms observed in OxiMouse. To view, query by Uniprot accession (e.g. A2ASS6-2 for ISOFORM 2 OF TITIN).</h4>
+	                    <p>Query: <p id = "noProteinQuery"></p>
+	                </div>
+	                <div class="modal-footer">
+	                    <button id="noProteinButton" type="button" class="btn btn-outline-secondary btn-lg btn-block" data-dismiss="modal">OK</button>
+	                </div>
+	            </div>
+	        </div>
+	    </div>
 	    <div class="modal fade" id="loadingModal" tabindex="-1" role="dialog">
 	        <div class="modal-dialog modal-dialog-centered" role="document">
 	            <div class="modal-content">
