Improve isoformModal formatting

--- a/sites.html
+++ b/sites.html
@@ -133,7 +133,8 @@
 	        <div class="modal-dialog modal-dialog-centered" role="document">
 	            <div class="modal-content">
 	                <div class="modal-body">
-	                    <h4>The query protein has isoforms observed in OxiMouse. To view, query by Uniprot accession (e.g. A2ASS6-2 for ISOFORM 2 OF TITIN).</h4>
+	                    <h4>The query protein has isoforms observed in OxiMouse.</h4>
+	                    <p>To view, query by Uniprot accession (e.g. A2ASS6-2 for ISOFORM 2 OF TITIN).</p>
 	                    <p>Query: <p id = "noProteinQuery"></p>
 	                </div>
 	                <div class="modal-footer">
