Update help and home page text for submission

--- a/help.html
+++ b/help.html
@@ -55,13 +55,12 @@
 					<div id = "bgCard" class="collapse show" aria-labelledby="bgHeader" data-parent="#helpAccordion">
 						<div class = "card-body">
 							<p>
-								Mammalian tissues engage in specialized physiology that is regulated by post-translational protein modification.  A major mode of protein regulation is initiated by reactive oxygen species (ROS) that modify protein cysteine residues.  ROS regulate a myriad of biological processes and ROS dysregulation has long been implicated in driving age-related dysfunction.  However, the functional targets of ROS modification that drive tissue-specific function and dysfunction in vivo are largely unknown.  To understand the molecular basis for ROS regulation of physiological differences between tissues, here we developed a mass spectrometric technology for the first comprehensive and quantitative mapping of the mouse cysteine redox proteome in vivo.  We report the cysteine redox landscape across 10 mouse tissues, identifying 9,400 proteins, and quantitatively mapping the post-translational state (% modification) of 150,000 cysteines corresponding to 37,000 unique sites, over 27,000 are confidently quantified. This landscape reveals several unexpected and fundamental paradigms of redox signaling. Cysteine redox networks within each tissue are highly selective and confer tissue-specific biology. We identify and functionally validate redox networks that are selectively perturbed in young/aged mice, providing a molecular basis for the longstanding proposed links between redox dysregulation and aging.
-							</p>
+								Mammalian tissues engage in specialized physiology that is regulated by post-translational protein modification.  A major mode of protein regulation is initiated by reactive oxygen species (ROS) that reversibly modify protein cysteine residues.  ROS regulate a myriad of biological processes and ROS dysregulation has long been implicated in driving age-related dysfunction.  However, the protein targets of ROS modification that drive tissue-specific function in vivo are largely unknown.  Here we develop a mass spectrometric technology for the first comprehensive and quantitative mapping of the mouse cysteine redox proteome in vivo.  We report the cysteine redox landscape across 10 tissues in young and old mice and establish several unexpected and fundamental paradigms of redox signaling. We define and validate cysteine redox networks within each tissue that are highly tissue-selective and underlie tissue-specific biology. We determine a common mechanism for encoding cysteine redox sensitivity by local electrostatic gating. Finally, we comprehensively identify redox-modified disease networks that remodel in aged mice, providing a systemic molecular basis for the longstanding proposed links between redox dysregulation and tissue aging. We provide the Oximouse compendium as a framework for understanding mechanisms of redox regulation in physiology and aging.							</p>
 							<p>
 								The OxiMouse web application was developed by Devin Schweppe (Gygi Lab, HMS) and Haopeng Xiao (Chouchani Lab, DFCI/HMS).
 							</p>
 							<p>
-								Please Cite: <b>Haopeng Xiao, et al. 2019</b>
+								Please Cite: <b>Haopeng Xiao, et al.</b>
 							</p>
 						</div>
 					</div>
@@ -79,11 +78,8 @@
 						<div class = "card-body">
 							<h4><b>Cysteine Oxidation</b></h4>
 							<p>
-								Despite cysteine is one of the least abundant amino acids, it is highly conserved across many species. A major mode of post-translational metabolic regulation is initiated through production of reactive oxygen species (ROS) and related species that modify protein function by covalent adduction of cysteine residues.  Because cysteine oxidation is fast, reversible, and often highly selective, it is employed for adaptive modulation of protein function, for example serving to either induce or abolish enzyme activity, or to facilitate or disrupt protein interactions, in response to acute metabolic perturbations. As such, redox regulatory metabolites have been implicated in a vast array of tissue-specific regulatory processes. Moreover, dysregulation of ROS and oxidative signaling is one of the longest postulated underlying causes of physiological decline with age. In this website, we provide oxidation stoichiometry data on cysteine sites. On the “Sites” page, every heatmap shows the full length of a protein. Oxidation sites are colored according to their oxidation% values in each tissue. The second plot aligns observed phosphorylation sites in Phosphomouse and quantified oxidation sites in Oximouse. The barplot presents oxidation% values of a cysteine oxidation site across 20 young and old tissues. 
-							</p>
-							<p>
 								<h4><b>Searching</b></h4>
-								To search for a oxidation sites on a protein of interest, enter a gene symbol or <a href="https://www.uniprot.org/">Uniprot accession</a> number into the search bar at the top of the <a href="index.html">Home</a> or <a href="sites.html">Sites</a> pages.
+								To search for an oxidation sites on a protein of interest, enter a gene symbol or <a href="https://www.uniprot.org/">Uniprot accession</a> number into the search bar at the top of the <a href="index.html">Home</a> or <a href="sites.html">Sites</a> pages.
 							</p>
 							<image style = "max-width: 800px" src="img/searchBar.png"></image>
 							<p>
@@ -107,9 +103,6 @@
 						<div class = "card-body">
 							<h4><b>OxiMouse Quantitation and Oxidation Stoichiometry</b></h4>
 							<p>
-								Despite the fundamental importance of redox regulation in tissue-specific physiology and mammalian aging, there is a surprising dearth of information regarding the protein modifications that explain the molecular basis for these processes in vivo.  Comprehensive analyses of this type are lacking in large part because existing methods are non-quantitative and/or cover a very small proportion of the cysteine proteome.  To address this problem, we developed a novel protocol, enriching very lowly abundant cysteines from highly complex biological samples using Cysteine-reactive phosphate tags (CPT) and Immobilized metal affinity chromatography (IMAC), and combined it with SPS- MS3- TMT to determine modification stoichiometry on cysteines (oxidation%). Cysteine oxidation stoichiometry is crucial because, for instance, a five-fold increase of cysteine oxidation could mean 0.2%-1% or 20%-100% on the stoichiometry level. While a 0.2%-1% change might be important if this oxidation event activates the protein, it would hardly be of any biological meaning if the modification inhibits protein functions. Determining stoichiometry would provide a more direct avenue to asses biological relevance of cysteine oxidation events.
-							</p>
-							<p>
 								<h4><b>Site Stoichiometry</b></h4>
 								Explore site occupancy at the whole protein map level using either the heatmap or the sequence map on the <a target="_blank" href="sites.html">Sites</a> page.
 							</p>
@@ -129,9 +122,6 @@
 					<div id = "networkCard" class="collapse" aria-labelledby="networkHeader" data-parent="#helpAccordion">
 						<div class = "card-body">
 							<h4><b>Network Analysis Information</b></h4>
-							<p>
-								This analysis seeks answers for two questions: (1) ROS signal through what protein interaction networks to regulate tissue-specific biological processes? and (2) what protein complexes could be forged together by interchain disulfide bonds? By overlaying OxiMouse on Bioplex 2.0, this analysis sheds light on these problems. On the community page, the heatmap presents the enrichment of oxidized proteins in each protein network observed in Bioplex 2.0. Clicking on any network in any tissue, the network is displayed and colored by oxidation% values (red-over 20% oxidized; orange- between 10-20%; skyblue- under 10%; and gray-not quantified).
-							</p>
 							<p>
 								<h4><b>Protein Interactions and Cys-Oxidation</b></h4>
 								Explore the interpaly between cys-oxidation and protein-protein interactions on the <a target="_blank" href="communities.html">Communities</a> page.
