Add graph tooltips

--- a/communities.html
+++ b/communities.html
@@ -134,6 +134,7 @@
 	    <script src="js/popper.min.js"></script>
 	    <script src="js/tippy_4-3-5.min.js"></script>
 	    <script src="js/cytoscape.min.js"></script>
+	    <script src="js/cytoscape-popper.js"></script>
 	    <!-- Oximouse -->
 	    <script src="js/oximouse_general.js"></script>
 	    <script src="js/oximouse_plots.js"></script>
