Additional HP data for download but not display

--- a/download.html
+++ b/download.html
@@ -49,14 +49,48 @@
 						<h2>
 							<button class = "btn collapsed" data-toggle = "collapse" data-target = "#downloadSiteCard" aria-expanded = "false" aria-controls = "downloadSiteCard">
 								<span data-feather="plus-circle"></span>
-								Download All Data
+								Download OxiMouse Website Data
 							</button>
 						</h2>
 					</div>
 					<div id = "downloadSiteCard" class="collapse" aria-labelledby="downloadSiteHeader" data-parent="#downloadAccordion">
 						<div class = "card-body">
-							<h5>Download flat files (tab-separated) containing all data displayed in the OxiMouse website.</h5>
+							<h5>Download tab-separated and xlsx files containing all data displayed in the OxiMouse website.</h5>
 						</div>
+						<div class = "container-fluid">
+							<h5>Download site stochiometry information for all proteins.</h5>
+							<form id = "downloadSites" method="get">
+								<button class="btn btn-outline-secondary mb-5" id = "downloadSitesButton" type="submit"><span data-feather="download"></span>Sites</button>
+							</form>
+							<h5>Download formatted site stochiometry information for OLD mouse proteins.</h5>
+							<form id = "downloadOldSites" method="get">
+								<button class="btn btn-outline-secondary mb-5" id = "downloadOldSitesButton" type="submit"><span data-feather="download"></span>Sites</button>
+							</form>
+							<h5>Download formatted site stochiometry information for YOUNG mouse proteins.</h5>
+							<form id = "downloadYoungSites" method="get">
+								<button class="btn btn-outline-secondary mb-5" id = "downloadYoungSitesButton" type="submit"><span data-feather="download"></span>Sites</button>
+							</form>
+							<h5>Download community enrichment percentages for oxidation within <a href="http://www.nature.com/nature/journal/vaop/ncurrent/full/nature22366.html">BioPlex</a> communities (Huttlin et. al. 2017).</h5>
+							<form id = "downloadCommunities" method="get">
+								<button class="btn btn-outline-secondary mb-5" id = "downloadCommunitiesButton" type="submit"><span data-feather="download"></span>Communities</button>
+							</form>
+							<h5>Download % oxidation overlaid on community proteins within <a href="http://www.nature.com/nature/journal/vaop/ncurrent/full/nature22366.html">BioPlex</a> communities (Huttlin et. al. 2017).</h5>
+							<form id = "downloadCommunityOverlay" method="get">
+								<button class="btn btn-outline-secondary mb-5" id = "downloadCommunityOverlayButton" type="submit"><span data-feather="download"></span>Communities</button>
+							</form>
+						</div>
+					</div>
+				</div>
+				<div class = "card">
+					<div class = "card-header bg-dark text-white" id = "downloadSiteHeader">
+						<h2>
+							<button class = "btn collapsed" data-toggle = "collapse" data-target = "#downloadSiteCard" aria-expanded = "false" aria-controls = "downloadSiteCard">
+								<span data-feather="plus-circle"></span>
+								Download OxiMouse Supplementary Data
+							</button>
+						</h2>
+					</div>
+					<div id = "downloadSiteCard" class="collapse" aria-labelledby="downloadSiteHeader" data-parent="#downloadAccordion">
 						<div class = "container-fluid">
 							<h5>Download site stochiometry information for all proteins.</h5>
 							<form id = "downloadSites" method="get">
@@ -66,9 +100,13 @@
 							<form id = "downloadCommunities" method="get">
 								<button class="btn btn-outline-secondary mb-5" id = "downloadCommunitiesButton" type="submit"><span data-feather="download"></span>Communities</button>
 							</form>
-							<h5>Download % oxidation overlaid on community proteins within <a href="http://www.nature.com/nature/journal/vaop/ncurrent/full/nature22366.html">BioPlex</a> communities (Huttlin et. al. 2017).</h5>
-							<form id = "downloadCommunityOverlay" method="get">
-								<button class="btn btn-outline-secondary mb-5" id = "downloadCommunityOverlayButton" type="submit"><span data-feather="download"></span>Communities</button>
+							<h5>Download disease adjusted data for YOUNG mice.</h5>
+							<form id = "downloadDiseaseYoung" method="get">
+								<button class="btn btn-outline-secondary mb-5" id = "downloadDiseaseYoungButton" type="submit"><span data-feather="download"></span>Communities</button>
+							</form>
+							<h5>Download disease adjusted data for OLD mice.</h5>
+							<form id = "downloadDiseaseOld" method="get">
+								<button class="btn btn-outline-secondary mb-5" id = "downloadDiseaseOldButton" type="submit"><span data-feather="download"></span>Communities</button>
 							</form>
 						</div>
 					</div>
