Fix download accordion supp

--- a/download.html
+++ b/download.html
@@ -82,15 +82,15 @@
 					</div>
 				</div>
 				<div class = "card">
-					<div class = "card-header bg-dark text-white" id = "downloadSiteHeader">
+					<div class = "card-header bg-dark text-white" id = "downloadSuppHeader">
 						<h2>
-							<button class = "btn collapsed" data-toggle = "collapse" data-target = "#downloadSiteCard" aria-expanded = "false" aria-controls = "downloadSiteCard">
+							<button class = "btn collapsed" data-toggle = "collapse" data-target = "#downloadSuppCard" aria-expanded = "false" aria-controls = "downloadSuppCard">
 								<span data-feather="plus-circle"></span>
 								Download OxiMouse Supplementary Data
 							</button>
 						</h2>
 					</div>
-					<div id = "downloadSiteCard" class="collapse" aria-labelledby="downloadSiteHeader" data-parent="#downloadAccordion">
+					<div id = "downloadSuppCard" class="collapse" aria-labelledby="downloadSuppHeader" data-parent="#downloadAccordion">
 						<div class = "container-fluid">
 							<h5>Download site stochiometry information for all proteins.</h5>
 							<form id = "downloadSites" method="get">
